--- a/index.html
+++ b/index.html
@@ -15,7 +15,26 @@
 
   <!-- Header Navigation -->
   <header class="header-top">
-    <div class="header-left">
+    <header class="header-top">  <!-- Add class for targeting -->
+  <div class="header-left">
+    <h1 class="name">Your Name</h1>
+    <p class="title">Your Title</p>
+  </div>
+  <button class="hamburger" aria-label="Toggle Navigation">  <!-- New hamburger button -->
+    <span></span>
+    <span></span>
+    <span></span>
+  </button>
+  <nav class="header-nav">
+    <ul>
+      <li><a href="#home" class="active">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+</header>
       <h1 class="name" style="color: rgb(65, 29, 66);">Divya Sharma</h1>
 
       <h3 class="title">MBA Finance & Analytics</h3>
@@ -507,3 +526,4 @@
 
 </body>
 </html>
+
